XMLExper/m12/m12_80_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘char* tinyxml2::XMLDocument::Identify(char*, tinyxml2::XMLNode**, bool)’:
tinyxml2.cpp:782:105: error: lvalue required as left operand of assignment
  782 |         /*PCI*/dynamic_cast<tinyxml2::XMLElement*>(returnNode) = CreateUnlinkedNode<XMLText>( _textPool );
      |                                                                                                         ^
diff: tinyxml2.S: No such file or directory
